--- a/styles/index.css
+++ b/styles/index.css
@@ -4,16 +4,16 @@ body {
 }
 
 #level_one {
-    background-image: url('../assets/clouds.jpg');
-    background-size: contain;
+    background-image: url('../assets/seamless-space-backgrounds/1024x1024/blue-nebula/8.png');
+    /* background-size: contain; */
     position: absolute;
 }
 
 nav {
     position: fixed;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(0, 0, 0, 0.25);
     width: 100%;
-    height: 32px;
+    height: 64px;
     top: 0px;
     left: 0px;
     z-index: 1;
