--- a/styles/index.css
+++ b/styles/index.css
@@ -18,7 +18,8 @@ nav {
     left: 0px;
     z-index: 1;
     display: grid;
-    grid-template-columns: min-content;
+    grid-template-columns: min-content min-content min-content;
+    grid-gap: 8px;
     padding-left: 32px;
     align-items: center;
 }
