--- a/styles/index.css
+++ b/styles/index.css
@@ -1,54 +1,60 @@
 body {
-    margin: 0px;
-    overflow: hidden;
+  margin: 0px;
+  overflow: hidden;
 }
 
 #level_one {
-    background-image: url('../assets/seamless-space-backgrounds/1024x1024/blue-nebula/8.png');
-    background-size: cover;
-    position: fixed;
+  background-image: url("../assets/seamless-space-backgrounds/1024x1024/blue-nebula/8.png");
+  background-size: cover;
+  position: fixed;
 }
 
 nav {
-    position: fixed;
-    background-color: rgba(0, 0, 0, 0.25);
-    width: 100%;
-    height: 64px;
-    top: 0px;
-    left: 0px;
-    z-index: 1;
-    display: grid;
-    grid-template-columns: min-content min-content min-content;
-    grid-gap: 8px;
-    padding-left: 32px;
-    align-items: center;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.25);
+  width: 100%;
+  height: 64px;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+  display: grid;
+  grid-template-columns: min-content min-content min-content;
+  grid-gap: 8px;
+  padding-left: 32px;
+  align-items: center;
 }
 
-
 div {
-    max-width: 75ch;
-    margin: auto;
-    height: 50vh;
-    transform: translateY(50%);
-    background-color: rgba(0, 0, 0, 0.25);
-    box-sizing: border-box;
-    text-align: center;
-    padding: 20px;
+  max-width: 75ch;
+  margin: auto;
+  height: 50vh;
+  transform: translateY(50%);
+  background-color: rgba(0, 0, 0, 0.25);
+  box-sizing: border-box;
+  text-align: center;
+  padding: 20px;
 }
 
 button {
-    height: 48px;
-    border: none;
-    border-radius: 16px;
-    padding-left: 32px;
-    padding-right: 32px;
-    font-weight: bold;
-    text-transform: uppercase;
-    cursor: pointer;
-    background-color: rgb(47, 165, 0);
-    color: white;
+  height: 48px;
+  border: none;
+  border-radius: 16px;
+  padding-left: 32px;
+  padding-right: 32px;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+  background-color: rgb(47, 165, 0);
+  color: white;
 }
 
 button:hover {
-    filter: brightness(110%);
+  filter: brightness(110%);
+}
+
+canvas {
+  image-rendering: crisp-edges;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+  -ms-interpolation-mode: nearest-neighbor;
 }
